# toe_aimbot

./: .gitignore  CMakeLists.txt  LICENSE  config.json  main.cpp  readme.md  start.sh
camera/: camera.cpp  camera.hpp
data/best_int8_openvino_model/: best.xml  metadata.yaml
data/best_openvino_model/: best.xml  metadata.yaml
detect/: detect.cpp  detect.hpp
determine/: determaine.hpp
general/: debug.hpp  structs.hpp
serial/: serial.cpp  serial.hpp
usbcamera/: usbcamera.cpp  usbcamera.hpp
